@@ -8,6 +8,7 @@ Jeu de pendu
 ```bash
 $ git clone https://github.com/DMTJosue/jeu-pendu.git
 $ cd jeu-pendu
+$ java --module-path "\path\to\javafx-sdk-11\lib" --add-modules javafx.controls,javafx.fxml -jar JeuPendu.jar
 ```
-
+Replace path of your lib javafx-sdk path
 <br />
